--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,13 +1,1 @@
-
-<!--<div class="row">
-  <form class="col s12">
-    <div class="row">
-      <div class="input-field col s6">
-        <input placeholder="Search"  type="text" class="validate" #textProcurado (keyup)="0">
-        <label for="name">Search</label>
-      </div>
-    </div>
-  </form>
-</div>-->
-<app-shared-list [title]='title' [items]='characters' [apiName]='apiName'></app-shared-list>
-<!--| filterByName: textProcurado.value-->
+<app-shared-list [title]='title' [items]='characters' [apiName]='apiName' [rota]='rota'></app-shared-list>
