--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar yellow accent-4 fixed">
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo">
-      <img src="assets/Star_Wars_logo.png">
+      <img src="assets/logo.png">
     </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li ><a routerLink="/" >Home</a></li>
