--- a/src/app/starship/starship.component.html
+++ b/src/app/starship/starship.component.html
@@ -12,4 +12,4 @@
       </ul>
     </div>
 </div>-->
-<app-shared-list [title]='title' [items]='starships'></app-shared-list>
+<app-shared-list [title]='title' [items]='starships' [apiName]='apiName' [rota]='rota'></app-shared-list>
