--- a/src/app/home/home-card/home-card.component.html
+++ b/src/app/home/home-card/home-card.component.html
@@ -1,12 +1,11 @@
 <div class="col s6 m6">
   <div class="card yellow accent-4">
-    <div class="card-content white-text">
-      <span class="card-title">Card Title</span>
-      <p>I am a very simple card. I am good at containing small bits of information.
-      I am convenient because I require little markup to use effectively.</p>
+    <div class="card-content black-text">
+      <span class="card-title">{{ title }}</span>
+      <img src="assets/{{img}}">
     </div>
-    <div class="card-action">
-      <a href="#">This is a link</a>
+    <div class="card-action black white-text">
+      <a  class="white-text">This is a link</a>
     </div>
   </div>
 </div>
