--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <app-home-card></app-home-card>
-    <app-home-card></app-home-card>
+    <app-home-card title="Character" img="character.png"></app-home-card>
+    <app-home-card title="Starship" img="starship.png"></app-home-card>
 </div>
