added lazy loading

--- a/src/app/character/character-detail/character-detail.component.html
+++ b/src/app/character/character-detail/character-detail.component.html
@@ -12,11 +12,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{dataCharacter.character.name}}</td>
-        <td>{{dataCharacter.character.height}}</td>
-        <td>{{dataCharacter.specie.name}}</td>
-        <td>{{dataCharacter.character.mass}}</td>
-        <td>{{dataCharacter.character.gender}}</td>
+        <td>{{dataCharacter?.character?.name}}</td>
+        <td>{{dataCharacter?.character?.height}}</td>
+        <td>{{dataCharacter?.specie?.name}}</td>
+        <td>{{dataCharacter?.character?.mass}}</td>
+        <td>{{dataCharacter?.character?.gender}}</td>
       </tr>
     </tbody>
   </table>
