removed comment code

--- a/src/app/home/home-card/home-card.component.html
+++ b/src/app/home/home-card/home-card.component.html
@@ -5,7 +5,7 @@
       <img src="assets/{{img}}">
     </div>
     <div class="card-action black white-text">
-      <a  [routerLink]='router' class="white-text">Go</a>
+      <a  [routerLink]='route' class="white-text">Go</a>
     </div>
   </div>
 </div>
