--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="row">
-    <app-home-card title="Character" img="character.png" router="/character"></app-home-card>
-    <app-home-card title="Starship" img="starship.png" router="/starship"></app-home-card>
+    <app-home-card title="Character" img="character.png" route="/character"></app-home-card>
+    <app-home-card title="Starship" img="starship.png" route="/starship"></app-home-card>
 </div>
